learn summary version.