@@ -10,22 +10,96 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.commons</groupId>-->
+<!--            <artifactId>commons-lang3</artifactId>-->
+<!--            <version>3.12.0</version>-->
+<!--        </dependency>-->
+    </dependencies>
     <build>
-    <pluginManagement>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>11</source>
+                        <target>11</target>
+                        <encoding>UTF-8</encoding>
+                        <compilerArgs>
+                            --enable-preview
+                        </compilerArgs>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-toolchains-plugin</artifactId>
+                    <version>1.1</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>toolchain</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <toolchains>
+                            <jdk>
+                                <version>18</version>
+                                <vendor>oracle-loom</vendor>
+                            </jdk>
+                        </toolchains>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jlink-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <configuration>
+
+                        <launcher>Main=com.rxcay.learnjava.demos/com.rxcay.learnjava.demos.concurrent.Main</launcher>
+                        <modulePaths>/Users/wangzizhou/jDemo/learnjava-demos/target/classes</modulePaths>
+                        <addModules>com.rxcay.learnjava.demos</addModules>
+                        <sourceJdkModules>
+                            /Users/wangzizhou/IndividualJDKs/jdk-18-loom-linux-x64/
+<!--                            /Users/wangzizhou/IndividualJDKs/jdk-17+35-alpine-x64/-->
+<!--                            /Library/Java/JavaVirtualMachines/jdk-17+35mvn/Contents/Home-->
+                        </sourceJdkModules>
+                        <addOptions>
+<!--                            "-XX:+UseZGC"-->
+                        </addOptions>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <encoding>UTF-8</encoding>
+                    <toolchains>
+                        <jdk>
+                            <version>18</version>
+                            <vendor>oracle-loom</vendor>
+                        </jdk>
+                    </toolchains>
                 </configuration>
             </plugin>
         </plugins>
-    </pluginManagement>
     </build>
-
-
 </project>
